Closes #9 enabled breadcrumbs

--- a/_posts/2020-06-11-test0611.adoc
+++ b/_posts/2020-06-11-test0611.adoc
@@ -1,10 +1,10 @@
 ---
-#permalink: /:posts/
+permalink: /:categories/:title/
 author: Takayuki Konishi
 layout: single
 header:
   overlay_image: /assets/images/title.jpg
-categories: product english
+categories: blog en
 tags: baz hoge
 ---
 = test01
