--- a/ja/_posts/2020-07-22-openstack.adoc
+++ b/ja/_posts/2020-07-22-openstack.adoc
@@ -14,22 +14,27 @@ toc_label: 目次
 = OpenStack all-in-oneを試す
 
 == はじめに
-中古のワークステーションをヤフオクで手に入れて、OpenShiftをインストールしたいもののインストーラーを使うにはOpenStackかRed Hat Virtualization、VMware vSphereのいずれかが必要なのでインストールに挑戦してみます。
+中古のワークステーションをヤフオクで手に入れたので、link:https://www.openshift.com/products/container-platform[Red Hat OpenShift Container Platform](OCP) 4.5をインストールします。しかしOCP 4.5のインストーラーが対応しているオンプレミス環境は、link:https://www.redhat.com/ja/technologies/linux-platforms/openstack-platform[Red Hat OpenStack Platform](OSP)かRed Hat Virtualization、VMware vSphereのいずれかです。ここではOSPのインストールに挑戦します。
 
 [.notice--warning]
-NOTE: このドキュメントは実験的な内容です。OpenStackは初めて触るので、適切な方法でない可能性が高く、正式なドキュメントを参照してください。
+NOTE: このドキュメントは実験的な内容です。OSPは初めて触るので、適切な方法でない可能性があります。公式のドキュメントを参照してください。
 
 == 参考にしたページ
 * link:https://qiita.com/konono/items/76747f39a44992f446c6[OpenShiftを爆速でインストールしたいあなたへ]
 ** OCP4 1クラスターをベアメタルにインストールする手順です。しかし今回の目的には合いません。
 * link:https://github.com/redhat-openstack/infrared/tree/stable[Infrared]
 ** OpenStackを簡単にインストールするツールです。今回使えるかもしれません。
-* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/16.0/html/quick_start_guide/index[Red Hat OpenStack Platform 16 Quick Start Guide]
+* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/16.1/html/quick_start_guide/index[Red Hat OpenStack Platform 16.1 Quick Start Guide]
 ** オフィシャルドキュメントなので一番正しいドキュメントですが、知識がないので読み解けるか自信はありません。
 
 == OpenShift側の要件
 * link:https://access.redhat.com/articles/4679401[OpenShift Container Platform on Red Hat OpenStack Platform Support Matrix]
 ** OCP 4.5はOSP 13と16.1へのインストールをサポートします。
+
+== OpenStackのサポート状況
+link:https://access.redhat.com/support/policy/updates/openstack/platform[Red Hat OpenStack Platform Life Cycle]
+
+RHOSP 13はすでにメンテナンスサポートフェーズで、2021年6月末で延長サポートフェーズに入ります。もう少し長いサポートが欲しいので、できれば16を使いたいです。
 
 == Infrared調査
 InfraredによるOSP 13のインストール手順はいただいているので、Infraredを調べてみます。
@@ -41,6 +46,59 @@ Currently supported distros are:
     Fedora 25, 26, 27
     RHEL 7.3, 7.4, 7.5
 ____
-うーん、Infraredのドキュメントは、最近は更新されていないですね…。とはいえターゲットのワークステーションは2014年製造と古いので、RHEL 7.xは確実に動くでしょうし、確実性を取ったほうがいいかもしれません。
+Infraredのドキュメントは、最近は更新されていないようです。とはいえターゲットのワークステーションは2014年製造と古いので、RHEL 7.xは確実に動くでしょうし、確実性を取ったほうがいいかもしれません。
+RHEL 8のリポジトリを見てみましたが、OpenStack 13はありませんでした。今後追加されるかもしれませんが、RHEL 7を使うか、OSP 16.1を使うのがよさそうです。
 
-== All-in-one Red Hat OpenStack Platform installationの調査
+この調査をしているうちに OSP 16.1がリリースされたので、ひとまずこのバージョンでの構築に挑戦します。
+
+== All-in-one OSP
+本来OSPは複数のサーバーにコンポーネントを分散してデプロイするものですが、検証用に1台のサーバーにインストールする手順が公開されています。
+
+=== 要件
+
+link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/16.1-beta/html/quick_start_guide/all-in-one-openstack-installation[Example network configuration]
+____
+Example network configuration
+
+    Interface eth0 assigned to the default network 192.168.122.0/24
+    Interface eth1 assigned to the management network 192.168.25.0/24 
+____
+
+ネットワークインターフェースが2個必要と書いてあります。当然ながらセグメントも分ける必要があります。とはいえAll-in-oneならマネジメントネットワークにつながる他のサーバーは無いので、物理的にはインターフェース1個でもいいのかもしれません。
+
+== ハードウェア
+
+サーバー: Dell Precision T7610
+CPU: Xeon E5-2670v2 10コア x 2 
+GPU: NVIDIA Quadro K5000
+ストレージ: SSD 256GB x 2
+
+これらは落札したサーバーに付属していました。メモリも32GB付属していましたが、eBayで落札した以下のメモリに換装しました。またSSDも追加しました。
+
+メモリ: 512GB (16x32GB) DDR3 PC3L-10600L 4Rx4 ECC Server Memory 
+ストレージ: SSD 1TB x 2
+
+== インストール前作業
+
+OSPインストール前に以下のような作業を行いました。
+
+=== ハードウェアセットアップ
+
+. T7610動作確認
+. メモリ換装
+. SSD増設
+
+=== SW
+
+. BIOS更新
+. RHEL 8.1インストール、登録
+
+== OSPインストール
+
+link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/16.1/html/quick_start_guide/index[Quick Start Guide]に記載の手順は、意外なほどスムーズに進みました。
+
+
+
+
+== TODO
+. ストレージをSwifttとCinderに割り当て
